--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,5 +2,7 @@
 
 <h1>Contact</h1>
 <p><%= content %></p>
-
+<p>Twitter: @Hariharan_11 <br>
+    Email:hariharan1107@gmail.com <br>
+I'll do my best to get back to you as soon as possible. In the meantime, happy coding!";</p>
 <%- include('partials/footer.ejs') %>
